--- a/src/app/templates/project/details.html
+++ b/src/app/templates/project/details.html
@@ -51,8 +51,18 @@
                 <li>{{ member.fullname }}</li>
                 {% endfor %}
             </ul>
-        <a href="{{ url_for('main.home') }}" class="btn btn-secondary btn-back">← Quay lại</a>
-        <a href="{{ url_for('main.ai') }}" class="btn btn-secondary btn-back">Phân bổ</a>
+        <div class="d-flex justify-content-between mt-4">
+            <a href="{{ url_for('main.project') }}" class="btn btn-outline-secondary btn-back">
+            ← Quay lại
+            </a>
+            <div>
+            <a href="{{ url_for('main.allocation_project', project_id=project.id) }}" class="btn btn-primary btn-back me-2">
+                Phân bổ dự án
+            </a>
+          
+            </div>
+        </div>
+
     </div>
 </body>
 
