--- a/src/app/templates/allocation/allocation_project.html
+++ b/src/app/templates/allocation/allocation_project.html
@@ -254,8 +254,8 @@
                             );
 
                             if (response.ok) {
-                                // alert("Phân bổ thành công!");
-                                // window.location.href = `/allocation_employee/${allocationData.project_id}`;
+                                window.location.href = `/project/${allocationData.project_id}`;
+
                             } else {
                                 alert("Đã xảy ra lỗi khi gửi kết quả phân bổ.");
                             }
