--- a/src/app/templates/project/details.html
+++ b/src/app/templates/project/details.html
@@ -59,7 +59,7 @@
             <a href="{{ url_for('main.allocation_project', project_id=project.id) }}" class="btn btn-primary btn-back me-2">
                 Phân bổ dự án
             </a>
-            <a href="{{ url_for('main.allocation_project_emplyee', project_id=project.id) }}" class="btn btn-warning btn-back"></a>
+            <a href="{{ url_for('main.allocation_project_emplyee', project_id=project.id) }}" class="btn btn-warning btn-back ">
                 Phân bổ nhân sự
             </a>
           
